# engine

./: .gitignore  CMakeLists.txt  install.bat
lib/assimp/lib/release/: assimp-vc140-mt.exp
res/: cube.fbx
src/: gpu.h  gpuscopedshader.cpp  gpuscopedshader.h  gpushader.cpp  gpushader.h  main.cpp  mesh.cpp  mesh.h  ressources.cpp  ressources.h  submesh.cpp  submesh.h
src/gpu/: CMakeLists.txt
src/gpu/include/gpu/: gpu.h  gpubinder.h  gpugeometry.h  gpuprogram.h  gpustate.h  gputexture.h
src/gpu/src/: gpugeometry.cpp  gpuprogram.cpp  gputexture.cpp
src/loader/: CMakeLists.txt
src/loader/include/loader/: image.h  mesh.h  submesh.h
src/loader/src/: image.cpp  mesh.cpp  submesh.cpp
